# xleapp-ios-non-free

./: setup.cfg
src/xleapp_ios_non_free/plugins/: aggDictScalars.py
