[metadata]
name = xleapp-ios-non-free
url = https://github.com/abrignoni/xLEAPP
project_urls =
        Documentation = https://github.com/abrignoni/xLEAPP/wiki,
        Source = https://github.com/abrignoni/xLEAP
version = attr:xleapp_ios_non_free.__version__
description = iOS Logs, Events, And Plists Parser
long_description = file: README.md
license = MIT
licence_file = LICENSE
python_requires = >=3.9

[options]
zip_safe = True
packages = find:
package_dir =
    = src
install_requires =
    xleapp

[options.entry_points]
    xleapp.plugins = ios=xleapp_ios_non_free.plugins:plugins

[options.packages.find]
where = src

[flake8]
# D203: 1 blank line required before class docstring. 
# W503: Line breaks should occur after the binary operator to keep all variable names aligned.
#       Disabled infavor of W504 (PEP8 updates)
ignore = D203, W503
exclude =
    # No need to traverse our git directory
    .git,
    # No need to traverse our virtual env directory
    .venv,
    # There's no value in checking cache directories
    __pycache__,

max-complexity = 12
max-line-length = 90
per-file-ignores =
    # __init__ module export names
    __init__.py: F401, E501
